--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@unrest/reactive-api",
+  "name": "@unrest/vue-reactive-storage",
   "author": "Chris Cauley <cauley.chris@gmail.com>",
   "version": "0.0.1",
-  "main": "dist/reactive-api.common.js",
+  "main": "dist/vue-reactive-storage.common.js",
   "license": "MIT",
   "scripts": {
     "build": "vue-cli-service build --target lib src/index.js",
