--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@unrest/eslint-config": "^0.0.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "local-storage-json": "^1.1.0",
