--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
   "name": "@unrest/vue-storage",
   "author": "Chris Cauley <cauley.chris@gmail.com>",
-  "version": "0.0.3",
-  "main": "dist/vue-storage.common.js",
+  "version": "0.0.4",
+  "main": "dist/vue-storage.es.js",
   "license": "MIT",
   "scripts": {
-    "build": "vue-cli-service build --target lib src/index.js --no-clean",
-    "lint": "vue-cli-service lint"
+    "build": "vite build",
+    "lint": "eslint \"src/**/*\""
   },
   "dependencies": {
-    "@unrest/eslint-config": "^0.0.4",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "local-storage-json": "^1.1.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@unrest/eslint-config": "^0.0.4",
+    "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0-0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "vite": "^2.3.8"
   },
   "browserslist": [
     "> 1%",
