--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@unrest/eslint-config": "^0.0.4",
     "@vitejs/plugin-vue": "^1.2.4",
+    "@vue/cli-plugin-babel": "^4.5.13",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
