--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "build": "vite build",
     "lint": "eslint \"src/**/*\""
   },
+  "peerDependencies": {
+    "vue": "^3.0.0"
+  },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "local-storage-json": "^1.1.0",
-    "vue": "^3.0.0"
+    "local-storage-json": "^1.1.0"
   },
   "devDependencies": {
     "@unrest/eslint-config": "^0.0.4",
@@ -36,7 +38,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0-0",
     "jest": "^26.6.3",
-    "vite": "^2.3.8"
+    "vite": "^2.3.8",
+    "vue": "^3.0.0"
   },
   "browserslist": [
     "> 1%",
