--- a/package.json
+++ b/package.json
@@ -23,15 +23,16 @@
     "vue": "^3.2.37"
   },
   "dependencies": {
-    "@vue/cli-plugin-babel": "^5.0.4",
     "axios": "^0.27.2",
     "core-js": "^3.23.1",
     "local-storage-json": "^1.1.0",
-    "lodash.debounce": "^4.0.8"
+    "lodash.debounce": "^4.0.8",
+    "querystring": "^0.2.1"
   },
   "devDependencies": {
     "@unrest/eslint-config": "^0.0.8",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/cli-plugin-babel": "^5.0.4",
     "jest": "^28.1.1",
     "vite": "^2.9.12",
     "vue": "^3.2.37"
